working: adding mappers for GE (and variants HGE, WHGE)