@@ -20,31 +20,34 @@
 
 package io.github.ericmedvet.jgea.core.representation.grammar.string.ge;
 
-import io.github.ericmedvet.jgea.core.representation.grammar.string.GrammarBasedMapper;
 import io.github.ericmedvet.jgea.core.representation.grammar.string.StringGrammar;
+import io.github.ericmedvet.jgea.core.representation.grammar.string.StringGrammarBasedMapper;
 import io.github.ericmedvet.jgea.core.representation.sequence.bit.BitString;
 import io.github.ericmedvet.jnb.datastructure.Tree;
 import java.util.List;
 
-public class StandardGEMapper<T> extends GrammarBasedMapper<BitString, T> {
+public class StandardGEMapper<T> extends StringGrammarBasedMapper<BitString, T> {
 
   private final int codonLength;
   private final int maxWraps;
+  private final T fallbackSymbol;
 
+  // TODO add a param with a fallback tree, to avoid invalid trees being just the fallbackSymbol
   public StandardGEMapper(int codonLength, int maxWraps, StringGrammar<T> grammar) {
     super(grammar);
     this.codonLength = codonLength;
     this.maxWraps = maxWraps;
+    fallbackSymbol = grammar.nonTerminalSymbols().iterator().next();
   }
 
   @Override
   public Tree<T> apply(BitString genotype) {
     if (genotype.size() < codonLength) {
       throw new IllegalArgumentException(
-          String.format("Short genotype (%d<%d)", genotype.size(), codonLength)
+          "Short genotype (%d<%d)".formatted(genotype.size(), codonLength)
       );
     }
-    Tree<T> tree = new Tree<>(grammar.startingSymbol());
+    Tree<T> tree = new Tree<>(grammar().startingSymbol());
     int currentCodonIndex = 0;
     int wraps = 0;
     while (true) {
@@ -52,7 +55,7 @@ public class StandardGEMapper<T> extends GrammarBasedMapper<BitString, T> {
       List<List<Integer>> replaceableLineages = finalTree.lineages()
           .stream()
           .filter(l -> finalTree.descendant(l).isLeaf())
-          .filter(l -> grammar.rules().containsKey(finalTree.descendant(l).label()))
+          .filter(l -> grammar().rules().containsKey(finalTree.descendant(l).label()))
           .toList();
       if (replaceableLineages.isEmpty()) {
         break;
@@ -64,13 +67,11 @@ public class StandardGEMapper<T> extends GrammarBasedMapper<BitString, T> {
         wraps = wraps + 1;
         currentCodonIndex = 0;
         if (wraps > maxWraps) {
-          throw new IllegalArgumentException(
-              String.format("Too many wraps (%d>%d)", wraps, maxWraps)
-          );
+          return new Tree<>(fallbackSymbol);
         }
       }
       T toReplaceSymbol = finalTree.descendant(toReplaceLineage).label();
-      List<List<T>> options = grammar.rules().get(toReplaceSymbol);
+      List<List<T>> options = grammar().rules().get(toReplaceSymbol);
       int optionIndex = 0;
       if (options.size() > 1) {
         optionIndex = genotype.slice(currentCodonIndex * codonLength, (currentCodonIndex + 1) * codonLength)
